<resources>
    <string name="app_name">Shopping_List</string>
    <string name="action_settings">Settings</string>
    <string name="produtos_a_adquirir">Products to Acquire</string>
    <string name="dinheiro_gasto">Money spent</string>
    <string name="compras_efetuadas">Purchases</string>
    <string name="introduzir_nome_do_produto">Insert Name of the product</string>
    <string name="introduzir_dados_dos_produtos_a_adquirir">Insert data of the products to purchase</string>
    <string name="introduzir_quantidade">Insert Quantity</string>
    <string name="title_activity_produtos_adquirir">Produtos_adquirir</string>
    <string name="title_activity_botao_carregado">BotaoCarregado</string>
    <string name="lista_de_produtos_a_adquirir">List of products to acquire</string>
    <string name="eliminar">Delete</string>
    <string name="alterar">Modify</string>
    <string name="inserir">Insert</string>
    <string name="lista_das_compras_ja_efetuadas">List of the purchases already done</string>
    <string name="title_activity_dinheiro_gasto">Dinheiro_gasto</string>
    <string name="dinheiro_gasto_ate_ao_momento">Money spent till now</string>
    <string name="title_activity_inserir_lista_produtos">Inserir_lista_produtos</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="title_activity_inserir_compras_efetuadas">inserir_compras_efetuadas</string>
    <string name="title_activity_inserir_dinheiro_gasto">inserir_dinheiro_gasto</string>
    <string name="title_activity_alterar_lista_produtos">alterar_lista_produtos</string>
    <string name="introduzir_nome_do_produto_a_alterar">Insert name of the prodcut to modify</string>
    <string name="introduzir_quantidade_a_alterar">Insert Quantity to modify</string>
    <string name="title_activity_alterar_compras_efetuadas">alterar_compras_efetuadas</string>
    <string name="title_activity_alterar_dinheiro_gasto">alterar_dinheiro_gasto</string>
    <string name="introduzir_data_a_alterar">Insert Data to modify</string>
    <string name="introduzir_montante_a_alterar">Insert amount of money to modify</string>
    <string name="title_activity_eliminar_lista_produtos">eliminar_lista_produtos</string>
    <string name="bolachas">Cookies</string>
    <string name="arroz">Rice</string>
    <string name="cereais">Cereals</string>
    <string name="title_activity_eliminar_compras_efetuadas">eliminar_compras_efetuadas</string>
    <string name="bananas">Bananas</string>
    <string name="salsichas">Sausages</string>
    <string name="frango">Chicken</string>
    <string name="title_activity_eliminar_dinheiro_gasto">eliminar_dinheiro_gasto</string>
    <string name="inserir_data">Insert Data</string>
    <string name="inserir_montante_gasto">Insert Money Spent</string>
    <string name="lista_de_compras">Shopping List</string>
</resources>
